# cursor-vexcel-muq8ie

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  deploy.yml  pr-checks.yml  release.yml  security-scan.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/helm/ai-service/: Chart.yaml  values.yaml
infrastructure/helm/core-service/: Chart.yaml  values.yaml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
src/backend/: .dockerignore  .env.development  .env.production  .env.staging  Dockerfile  README.md  docker-compose.yml  jest.config.ts  lerna.json  nodemon.json  package.json  tsconfig.json
src/backend/services/ai/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/backend/services/ai/src/: __init__.py  constants.py
src/backend/services/ai/src/controllers/: formula_controller.py  suggestion_controller.py
src/backend/services/ai/src/models/: formula_model.py  suggestion_model.py
src/backend/services/ai/src/services/: openai_service.py
src/backend/services/ai/src/utils/: formula_parser.py  validation.py
src/backend/services/ai/tests/: conftest.py  test_formula_controller.py  test_suggestion_controller.py
src/web/: .env.development  .env.production  .env.staging  .eslintignore  .eslintrc.json  .gitignore  .prettierrc  README.md  babel.config.js  jest.config.ts  package.json  tsconfig.json  webpack.config.ts
src/web/src/: App.tsx  (+2 more)
(+218 files in other folders)
