[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-service"
version = "1.0.0"
description = "AI service for Excel formula generation and optimization using GPT-4"
authors = ["Excel AI Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.0"
openai = "1.0.0"
pydantic = "2.0.0"
python-dotenv = "1.0.0"
redis = "6.2.0"
uvicorn = "0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.0"
pytest-cov = "4.0.0"
pytest-asyncio = "0.21.0"
black = "23.3.0"
isort = "5.12.0"
mypy = "1.3.0"
flake8 = "6.0.0"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "src/**/*.py"
extend-exclude = "/migrations"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 100
known_first_party = ["ai_service"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-report=html --asyncio-mode=auto"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running"
]